--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,6 @@
 	defaultBranch = main
 [alias]
 	dotfiles = !git --git-dir=$HOME/dotfiles.git/ --work-tree=$HOME
+[user]
+	email = emmajadecoffin@gmail.com
+	name = CanvasofSpores
