Updated autostart configs to use non-flatpak vesktop

--- a/.config/hypr/config/autostart.conf
+++ b/.config/hypr/config/autostart.conf
@@ -25,8 +25,8 @@ exec-once = dbus-update-activation-environment --systemd &
 exec-once = $idlehandler
 
 # ## Startup Apps
-exec-once = [workspace 2 silent] flatpak run --branch=stable --arch=x86_64 --command=startvesktop --file-forwarding dev.vencord.Vesktop --no-sandbox --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-features=WaylandLinuxDrmSyncobj @@u %U @@
-exec-once = [workspace 3 silent] Telegram -- %u
+exec-once = [workspace 2 silent] vesktop --no-sandbox --enable-features=WaylandLinuxDrmSyncobj %U 
+exec-once = [workspace 3 silent] Telegram %u
 exec-once = [workspace 1 silent] steam -nochatui -nofriendsui -silent 
 exec-once = [workspace 1 silent] bitwarden-desktop
 exec-once = [workspace special:obsidian silent] obsidian
