--- a/.config/hypr/config/autostart.conf
+++ b/.config/hypr/config/autostart.conf
@@ -10,6 +10,7 @@ exec-once = wpaperd -d &
 # exec-once = __GL_THREADED_OPTIMIZATIONS=0 linux-wallpaperengine --silent --fps 30 --screen-root HDMI-A-1 --screen-root DP-2 24477602742
 exec-once = waybar &
 exec-once = fcitx5 -d &
+exec-once = syncthingtray-qt6 &
 exec-once = mako &
 exec-once = nm-applet --indicator &
 exec-once = bash -c "mkfifo /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob && tail -f /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob | wob & disown" &
@@ -30,4 +31,3 @@ exec-once = [workspace 3 silent] Telegram %u
 exec-once = [workspace 1 silent] steam -nochatui -nofriendsui -silent 
 exec-once = [workspace 1 silent] bitwarden-desktop
 exec-once = [workspace special:obsidian silent] obsidian
-
