--- a/.config/hypr/config/windowrules.conf
+++ b/.config/hypr/config/windowrules.conf
@@ -21,6 +21,7 @@ windowrulev2 = opacity 0.80 0.80 1,class:^(qt5ct)$
 windowrulev2 = opacity 0.80 0.80 1,class:^(qt6ct)$
 windowrulev2 = opacity 0.80 0.80 1,class:^(kvantummanager)$
 windowrulev2 = opacity 0.80 0.70 1,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = opacity 0.80 0.70 1,class:^(syncthingtray-qt6)$
 windowrulev2 = opacity 0.80 0.70 1,class:^(blueman-manager)$
 windowrulev2 = opacity 0.80 0.70 1,class:^(nm-applet)$
 windowrulev2 = opacity 0.80 0.70 1,class:^(nm-connection-editor)$
@@ -74,6 +75,7 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float,class:^(syncthingtray-qt6)$
 
 windowrulev2 = float,class:^(Signal)$ # Signal-Gtk
 windowrulev2 = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
@@ -91,6 +93,9 @@ windowrulev2 = monitor DP-2,class:^(vesktop)$
 windowrulev2 = workspace 2,class:^(vesktop)$
 windowrulev2 = monitor DP-2,title:^(Telegram)$
 windowrulev2 = workspace 3,title:^(Telegram)$
+
+windowrulev2 = persistentsize,class:^(syncthingtray-qt6)$
+windowrulev2 = center,class:^(syncthingtray-qt6)$
 
 # common modals
 windowrule = float,initialtitle:^(Open File)$
